--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Comenzamos con el segundo. Esta vez mejor.
+Iré subiendo periódicamente los ejercicios que vaya realizando por aquí. Sois libres de informar de cualquier mejora que se le
+pueda hacer al código. Soy plenamente consciente de que no están completamente optimizados, por lo que sólo sirven como referencia
+para estudios.
